--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "MdCollab"
+name = "md_collab"
 version = "0.1.0"
-authors = ["tfachmann <fachmanntj@gmail.com>"]
+authors = ["tfachmann <fachmanntj@gmail.com>", "David Nelles <david.nelles@gmx.de>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
