--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["tfachmann <fachmanntj@gmail.com>", "David Nelles <david.nelles@gmx.d
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = "0.2"
+pulldown-cmark = { version = "0.7", default-features = false }
