--- a/site/package.json
+++ b/site/package.json
@@ -6,5 +6,8 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "file-saver": "^2.0.2"
   }
 }
