--- a/site/package.json
+++ b/site/package.json
@@ -1,10 +1,17 @@
 {
-  "scripts": {
-    "serve": "webpack-dev-server"
-  },
-  "devDependencies": {
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  }
+    "scripts": {
+		"serve": "webpack-dev-server",
+		"build": "webpack"
+    },
+    "devDependencies": {
+        "eslint": "^7.4.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1",
+        "webpack": "^4.25.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10"
+    }
 }
