--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -14,6 +14,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: site
 
 
     runs-on: ubuntu-latest
@@ -24,4 +25,4 @@ jobs:
     - run: npm install
       
     - name: run stylelint
-      run: npx stylelint --config .\site\lint\.stylelintrc.json "**/*.css"
+      run: npx stylelint --config ./lint/.stylelintrc.json "**/*.css"
