--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -14,6 +14,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: site
 
 
     runs-on: ubuntu-latest
@@ -21,8 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: install linter
+    - name: install htmllint
       run: sudo npm install -g htmllint-cli
       
-    - name: run linter
-      run: htmllint --rc ./site/lint/
+    - name: run htmllint
+      run: htmllint --rc ./lint/.htmllintrc *.html
+
+    - run: npm install
+
+    - name: run stylelint
+      run: npx stylelint --config ./lint/.stylelintrc.json "**/*.html"
