refactor: moved eslint config to lint directory

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm install && npm install -g npm-check
       
     - name: run linter
-      run: npx eslint *.js
+      run: npx eslint -c ./lint/.eslintrc.js "**/*.js"
 
     - name: check dependencies
       run: npm-check
