--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 pulldown-cmark = { version = "0.7", default-features = false }
+regex = "1.3"
+lazy_static = "1.4"
